{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 9,
  "lineage": "51ebbe4f-3fad-0b0a-b6d9-609c3736270a",
  "resources": [
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad9b833e03106e0a",
            "arn": "arn:aws:ec2:us-east-1:741448930322:elastic-ip/eipalloc-0ad9b833e03106e0a",
            "association_id": "eipassoc-07016251ee2e01a9f",
            "domain": "vpc",
            "id": "eipalloc-0ad9b833e03106e0a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0110ecb0e1e58fe23",
            "private_dns": "ip-172-16-0-236.ec2.internal",
            "private_ip": "172.16.0.236",
            "public_dns": "ec2-52-71-178-106.compute-1.amazonaws.com",
            "public_ip": "52.71.178.106",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-EIP",
              "Owner-Email": "luwamarielleky@gmail"
            },
            "tags_all": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-EIP",
              "Owner-Email": "luwamarielleky@gmail"
            },
            "vpc": true
          },
          "dependencies": [
            "module.Network.aws_internet_gateway.ig",
            "module.Network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930322:internet-gateway/igw-09932bd0e45da3e00",
            "id": "igw-09932bd0e45da3e00",
            "owner_id": "741448930322",
            "tags": {
              "Name": "vpc-0c52aa15541fda138-IG!"
            },
            "tags_all": {
              "Name": "vpc-0c52aa15541fda138-IG!"
            },
            "vpc_id": "vpc-0c52aa15541fda138"
          },
          "dependencies": [
            "module.Network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad9b833e03106e0a",
            "association_id": "eipassoc-07016251ee2e01a9f",
            "connectivity_type": "public",
            "id": "nat-0b7f6c493ad890628",
            "network_interface_id": "eni-0110ecb0e1e58fe23",
            "private_ip": "172.16.0.236",
            "public_ip": "52.71.178.106",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09b9022cb4f0e0b1f",
            "tags": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-Nat",
              "Owner-Email": "luwamarielleky@gmail"
            },
            "tags_all": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-Nat",
              "Owner-Email": "luwamarielleky@gmail"
            }
          },
          "dependencies": [
            "module.Network.aws_eip.nat_eip",
            "module.Network.aws_internet_gateway.ig",
            "module.Network.aws_subnet.public",
            "module.Network.aws_vpc.main",
            "module.Network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09932bd0e45da3e00",
            "id": "r-rtb-01246cb94131e2d731080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01246cb94131e2d73",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_internet_gateway.ig",
            "module.Network.aws_route_table.public-rtb",
            "module.Network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930322:route-table/rtb-04dc274012c815800",
            "id": "rtb-04dc274012c815800",
            "owner_id": "741448930322",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-Private-Route-Table",
              "Owner-Email": "luwamarielleky@gmail"
            },
            "tags_all": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-Private-Route-Table",
              "Owner-Email": "luwamarielleky@gmail"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c52aa15541fda138"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930322:route-table/rtb-01246cb94131e2d73",
            "id": "rtb-01246cb94131e2d73",
            "owner_id": "741448930322",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09932bd0e45da3e00",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-Public-Route-Table",
              "Owner-Email": "luwamarielleky@gmail"
            },
            "tags_all": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-Public-Route-Table",
              "Owner-Email": "luwamarielleky@gmail"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c52aa15541fda138"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07da9024e03411f04",
            "route_table_id": "rtb-04dc274012c815800",
            "subnet_id": "subnet-0b00cadafc4f5cdda"
          },
          "dependencies": [
            "module.Network.aws_route_table.private-rtb",
            "module.Network.aws_subnet.private",
            "module.Network.aws_vpc.main",
            "module.Network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032b8d005fbf399fb",
            "route_table_id": "rtb-04dc274012c815800",
            "subnet_id": "subnet-02a16815144cde150"
          },
          "dependencies": [
            "module.Network.aws_route_table.private-rtb",
            "module.Network.aws_subnet.private",
            "module.Network.aws_vpc.main",
            "module.Network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059e43214e050b76c",
            "route_table_id": "rtb-04dc274012c815800",
            "subnet_id": "subnet-0754a08a8a14f0111"
          },
          "dependencies": [
            "module.Network.aws_route_table.private-rtb",
            "module.Network.aws_subnet.private",
            "module.Network.aws_vpc.main",
            "module.Network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afd12e80b2645efc",
            "route_table_id": "rtb-04dc274012c815800",
            "subnet_id": "subnet-051ff5dfd6aa7569c"
          },
          "dependencies": [
            "module.Network.aws_route_table.private-rtb",
            "module.Network.aws_subnet.private",
            "module.Network.aws_vpc.main",
            "module.Network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027fae9f4076a2f7a",
            "route_table_id": "rtb-01246cb94131e2d73",
            "subnet_id": "subnet-09b9022cb4f0e0b1f"
          },
          "dependencies": [
            "module.Network.aws_route_table.public-rtb",
            "module.Network.aws_subnet.public",
            "module.Network.aws_vpc.main",
            "module.Network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090a2651adcf94034",
            "route_table_id": "rtb-01246cb94131e2d73",
            "subnet_id": "subnet-0d2129941191c19fa"
          },
          "dependencies": [
            "module.Network.aws_route_table.public-rtb",
            "module.Network.aws_subnet.public",
            "module.Network.aws_vpc.main",
            "module.Network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930322:subnet/subnet-0b00cadafc4f5cdda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b00cadafc4f5cdda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448930322",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-Private-Subnet-0",
              "Owner-Email": "luwamarielleky@gmail"
            },
            "tags_all": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-Private-Subnet-0",
              "Owner-Email": "luwamarielleky@gmail"
            },
            "vpc_id": "vpc-0c52aa15541fda138"
          },
          "dependencies": [
            "module.Network.aws_vpc.main",
            "module.Network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930322:subnet/subnet-02a16815144cde150",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a16815144cde150",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448930322",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-Private-Subnet-1",
              "Owner-Email": "luwamarielleky@gmail"
            },
            "tags_all": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-Private-Subnet-1",
              "Owner-Email": "luwamarielleky@gmail"
            },
            "vpc_id": "vpc-0c52aa15541fda138"
          },
          "dependencies": [
            "module.Network.aws_vpc.main",
            "module.Network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930322:subnet/subnet-0754a08a8a14f0111",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0754a08a8a14f0111",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448930322",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-Private-Subnet-2",
              "Owner-Email": "luwamarielleky@gmail"
            },
            "tags_all": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-Private-Subnet-2",
              "Owner-Email": "luwamarielleky@gmail"
            },
            "vpc_id": "vpc-0c52aa15541fda138"
          },
          "dependencies": [
            "module.Network.aws_vpc.main",
            "module.Network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930322:subnet/subnet-051ff5dfd6aa7569c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051ff5dfd6aa7569c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448930322",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-Private-Subnet-3",
              "Owner-Email": "luwamarielleky@gmail"
            },
            "tags_all": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-Private-Subnet-3",
              "Owner-Email": "luwamarielleky@gmail"
            },
            "vpc_id": "vpc-0c52aa15541fda138"
          },
          "dependencies": [
            "module.Network.aws_vpc.main",
            "module.Network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930322:subnet/subnet-09b9022cb4f0e0b1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b9022cb4f0e0b1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448930322",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-Public-Subnet-0",
              "Owner-Email": "luwamarielleky@gmail"
            },
            "tags_all": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-Public-Subnet-0",
              "Owner-Email": "luwamarielleky@gmail"
            },
            "vpc_id": "vpc-0c52aa15541fda138"
          },
          "dependencies": [
            "module.Network.aws_vpc.main",
            "module.Network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930322:subnet/subnet-0d2129941191c19fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2129941191c19fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448930322",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-Public-Subnet-1",
              "Owner-Email": "luwamarielleky@gmail"
            },
            "tags_all": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-Public-Subnet-1",
              "Owner-Email": "luwamarielleky@gmail"
            },
            "vpc_id": "vpc-0c52aa15541fda138"
          },
          "dependencies": [
            "module.Network.aws_vpc.main",
            "module.Network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930322:vpc/vpc-0c52aa15541fda138",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0aa46498517e6f267",
            "default_route_table_id": "rtb-0f3b32ce78ad44e23",
            "default_security_group_id": "sg-05c3f39478213ea8d",
            "dhcp_options_id": "dopt-095bfaf0bea7b7bf8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c52aa15541fda138",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f3b32ce78ad44e23",
            "owner_id": "741448930322",
            "tags": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-VPC",
              "Owner-Email": "luwamarielleky@gmail"
            },
            "tags_all": {
              "Billing-Account": "741448930322",
              "Environment": "production",
              "Managed-By": "marielle",
              "Name": "techeon-VPC",
              "Owner-Email": "luwamarielleky@gmail"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930322:security-group/sg-0082f5e0b94904c2c",
            "description": "Allow incoming HTTP connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0082f5e0b94904c2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_web_sg",
            "name_prefix": "",
            "owner_id": "741448930322",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion-SG"
            },
            "tags_all": {
              "Name": "Bastion-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c52aa15541fda138"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datalayer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930322:security-group/sg-0a5aeec880d70d04a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5aeec880d70d04a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c7852c0df1efed55"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0082f5e0b94904c2c",
                  "sg-0c7852c0df1efed55"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "741448930322",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "datalayer-sg"
            },
            "tags_all": {
              "Name": "datalayer-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c52aa15541fda138"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930322:security-group/sg-0885c5bf6a21cdb5e",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0885c5bf6a21cdb5e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "741448930322",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ext-alb-sg"
            },
            "tags_all": {
              "Name": "ext-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c52aa15541fda138"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "int-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930322:security-group/sg-0125252acfdd3f92f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0125252acfdd3f92f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e03b5364581aeb05"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-alb-sg",
            "name_prefix": "",
            "owner_id": "741448930322",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "int-alb-sg"
            },
            "tags_all": {
              "Name": "int-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c52aa15541fda138"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930322:security-group/sg-0e03b5364581aeb05",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e03b5364581aeb05",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0082f5e0b94904c2c"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0885c5bf6a21cdb5e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "741448930322",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-SG"
            },
            "tags_all": {
              "Name": "nginx-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c52aa15541fda138"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930322:security-group/sg-0c7852c0df1efed55",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7852c0df1efed55",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0082f5e0b94904c2c"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0125252acfdd3f92f"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-asg-sg",
            "name_prefix": "",
            "owner_id": "741448930322",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-sg"
            },
            "tags_all": {
              "Name": "webserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c52aa15541fda138"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1170245933",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e03b5364581aeb05",
            "security_group_rule_id": "sgr-0caa3e77adfd3cc00",
            "self": false,
            "source_security_group_id": "sg-0082f5e0b94904c2c",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.main",
            "module.Security.aws_security_group.bastion_sg",
            "module.Security.aws_security_group.nginx-sg"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-3428941061",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0125252acfdd3f92f",
            "security_group_rule_id": "sgr-07eb94bd1abd0ba3e",
            "self": false,
            "source_security_group_id": "sg-0e03b5364581aeb05",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.main",
            "module.Security.aws_security_group.int-alb-sg",
            "module.Security.aws_security_group.nginx-sg"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-4284609470",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a5aeec880d70d04a",
            "security_group_rule_id": "sgr-0e1b751943093d0ed",
            "self": false,
            "source_security_group_id": "sg-0082f5e0b94904c2c",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.main",
            "module.Security.aws_security_group.bastion_sg",
            "module.Security.aws_security_group.datalayer-sg"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3247535423",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a5aeec880d70d04a",
            "security_group_rule_id": "sgr-00ead6d3df8a53fec",
            "self": false,
            "source_security_group_id": "sg-0c7852c0df1efed55",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.main",
            "module.Security.aws_security_group.datalayer-sg",
            "module.Security.aws_security_group.webserver-sg"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-1381492149",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a5aeec880d70d04a",
            "security_group_rule_id": "sgr-0cf583a82d66353e5",
            "self": false,
            "source_security_group_id": "sg-0c7852c0df1efed55",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.main",
            "module.Security.aws_security_group.datalayer-sg",
            "module.Security.aws_security_group.webserver-sg"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-2922069655",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e03b5364581aeb05",
            "security_group_rule_id": "sgr-0b66fe14b18b9ea74",
            "self": false,
            "source_security_group_id": "sg-0885c5bf6a21cdb5e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.main",
            "module.Security.aws_security_group.ext-alb-sg",
            "module.Security.aws_security_group.nginx-sg"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-3300100492",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c7852c0df1efed55",
            "security_group_rule_id": "sgr-0dfbd9277eddc2a43",
            "self": false,
            "source_security_group_id": "sg-0125252acfdd3f92f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.main",
            "module.Security.aws_security_group.int-alb-sg",
            "module.Security.aws_security_group.webserver-sg"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-778441969",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c7852c0df1efed55",
            "security_group_rule_id": "sgr-0fce3cb9f63977e05",
            "self": false,
            "source_security_group_id": "sg-0082f5e0b94904c2c",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.main",
            "module.Security.aws_security_group.bastion_sg",
            "module.Security.aws_security_group.webserver-sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7af5fe939f2677f",
            "arn": "arn:aws:ec2:us-east-1:741448930322:instance/i-0a92ce6c63600c97b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a92ce6c63600c97b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07ada73a50a73581e",
            "private_dns": "ip-172-16-0-153.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.153",
            "public_dns": "ec2-100-26-251-198.compute-1.amazonaws.com",
            "public_ip": "100.26.251.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-043d57ed3d758e40a",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b9022cb4f0e0b1f",
            "tags": {
              "Name": "techeon-Bastion"
            },
            "tags_all": {
              "Name": "techeon-Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0885c5bf6a21cdb5e"
            ]
          },
          "dependencies": [
            "module.Network.aws_subnet.public",
            "module.Network.aws_vpc.main",
            "module.Network.data.aws_availability_zones.available",
            "module.Security.aws_security_group.ext-alb-sg"
          ]
        }
      ]
    }
  ]
}